# music_player

./: Cargo.toml  config.yml  readme.md
src/: main.rs
src/app/: mod.rs
src/commands/: mod.rs
src/config/: mod.rs
src/file_ops/: mod.rs
src/handler/: event.rs
src/music/: mod.rs
src/utils/: split_path.rs
src/view/: color.rs  display.rs  mod.rs  music_list.rs  play_music_list.rs  playing_music.rs
